--- a/views/income.ejs
+++ b/views/income.ejs
@@ -66,7 +66,7 @@
   ======================================================= -->
 </head>
 
-<body background = "/images/cartoonmoney.jpg">
+<body>
   <!-- container section start -->
   <section id="container" class="">
 
@@ -96,7 +96,7 @@
         <!-- notificatoin dropdown start-->
         <ul class="nav pull-right top-menu">
 
-          <!-- task notificatoin start -->
+          <!-- task notificatoin start 
           <li id="task_notificatoin_bar" class="dropdown">
             <a data-toggle="dropdown" class="dropdown-toggle" href="#">
                             <i class="icon-task-l"></i>
@@ -180,8 +180,8 @@
               </li>
             </ul>
           </li>
-          <!-- task notificatoin end -->
-          <!-- inbox notificatoin start-->
+          task notificatoin end -->
+          <!-- inbox notificatoin start
           <li id="mail_notificatoin_bar" class="dropdown">
             <a data-toggle="dropdown" class="dropdown-toggle" href="#">
                             <i class="icon-envelope-l"></i>
@@ -245,7 +245,7 @@
               </li>
             </ul>
           </li>
-          <!-- inbox notificatoin end -->
+           inbox notificatoin end -->
           <!-- alert notification start-->
           <li id="alert_notificatoin_bar" class="dropdown">
             <a data-toggle="dropdown" class="dropdown-toggle" href="#">
@@ -332,7 +332,7 @@
       </div>
     </header>
     <!--header end-->
-
+<br>
     <!--sidebar start-->
     <aside>
       <div id="sidebar" class="nav-collapse ">
@@ -427,8 +427,8 @@
             </ol> -->
           </div>
         </div>
-<div>ADD
-  <button class="add" onclick="add()">+</button>
+<div class="pro">ADD
+  <button class="add" onclick="add()">+</button></div>
   <div class="form-popup" id="add">
     <form action="/addpocket" class="form-container" method = 'post'>
       <h1>Add a Pocket</h1>
