--- a/views/saving.ejs
+++ b/views/saving.ejs
@@ -1,7 +1,9 @@
 <html>
     <head><title>saving</title></head>
     <link href="/stylesheets/saving.css" rel="stylesheet">
-    <body class="color"><div class="mainblock">
+    <body class="color">
+        <div class="mainblock">
+        <a class="closemain" href="/home">&times;</a>
         <div class="amountsaved">
             <h2>You Have Saved</h2>
             <input type="text" class="input1"> </input>
