--- a/views/expense.ejs
+++ b/views/expense.ejs
@@ -356,16 +356,16 @@
                 <li><a class="" href="form_validation.html">Form Validation</a></li>
               </ul> -->
             </li>
-            <li class="sub-menu">
+            <li class="sub">
               <a href="/saving" class="">
                             <i class="icon_house_alt"></i>
                             <span>Savings Wallet</span>
                             <!-- <span class="menu-arrow arrow_carrot-right"></span> -->
                         </a>
               <ul class="sub">
-                <li><a class="" href="general.html">Elements</a></li>
+                <!-- <li><a class="" href="general.html">Elements</a></li>
                 <li><a class="" href="buttons.html">Buttons</a></li>
-                <li><a class="" href="grids.html">Grids</a></li>
+                <li><a class="" href="grids.html">Grids</a></li> -->
               </ul>
             </li>
             <li>
