--- a/views/income.ejs
+++ b/views/income.ejs
@@ -420,7 +420,7 @@
         <!--overview start-->
         <div class="row">
           <div class="col-lg-12">
-            <h3 class="page-header"><i class="fa fa-laptop"></i> Dashboard</h3>
+            <h3 class="page-header"><i class="fa fa-laptop"></i> Total Income = <%= addall %></h3>
             <!-- <ol class="breadcrumb">
               <li><i class="fa fa-home"></i><a href="index.html">Home</a></li>
               <li><i class="fa fa-laptop"></i>Dashboard</li>
@@ -442,6 +442,10 @@
   </div>
 </div>
 <br>
+<!-- <div class='business'>
+    <button class="open-button" "> Total Income = <%= addall %></button>
+         </div>
+ <br> -->
 <% incomes.forEach(function(income) {%>
     <div class='business'>
         <a href = "/income/<%= income._id %>" ><button class="open-button" onclick="openForm()"> <%= income.name %> Pocket <br> <i>Amount :</i> <%= income.amount %></button></a>
@@ -454,7 +458,7 @@
             </div>
     <br>
     <% }) %>
-
+    
     </section></section>
    
        
