--- a/views/index.ejs
+++ b/views/index.ejs
@@ -55,18 +55,18 @@
       </div>
 
       <!--logo start-->
-      <a href="/home" class="logo">Mero <span class="lite"></span>Bachat</span></a>
+      <a href="/home" class="logo">Mero <span class="lite">Bachat</span></a>
       <!--logo end-->
 
       <div class="nav search-row" id="top_menu">
         <!--  search form start -->
-        <ul class="nav top-menu">
+        <!-- <ul class="nav top-menu">
           <li>
             <form class="navbar-form">
               <input class="form-control" placeholder="Search" type="text">
             </form>
           </li>
-        </ul>
+        </ul> -->
         <!--  search form end -->
       </div>
 
