changes in border

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -54,13 +54,11 @@
         <div class="icon-reorder tooltips" data-original-title="Toggle Navigation" data-placement="bottom"><i class="icon_menu"></i></div>
       </div>
 
-      <!--logo start--><div class="mainlogo">
-      <a href="/home" class="logo"></div>
-        <div class="logoo">Mero <span class="lite">Bachat</span></a>
-      <!--logo end-->
+      <!--logo start-->
+      <div class="mainlogo"><a href="/home" class="mainlogo"><img src="/images/mainlogo.png"> </a></div>
     </div>
-      <div class="nav search-row" id="top_menu">
-        <!--  search form start -->
+     <!--   <div class="nav search-row" id="top_menu">
+        <!--  search form start 
         <ul class="nav top-menu">
           <li>
             <form class="navbar-form">
@@ -68,8 +66,8 @@
             </form>
           </li>
         </ul>
-        <!--  search form end -->
-      </div>
+        <!--  search form end
+      </div> -->
 
       <div class="top-nav notification-row">
         <!-- notificatoin dropdown start-->
@@ -275,7 +273,7 @@
           <li class="dropdown">
             <a data-toggle="dropdown" class="dropdown-toggle" href="#">
                             <span class="profile-ava">
-                                <img alt="" src="img/avatar1_small.jpg">
+                                
                             </span>
                             <span class="username"><%= LoginInfo.username %></span>
                             <b class="caret"></b>
@@ -312,14 +310,15 @@
     </header>
     <!--header end-->
 
-    <!--sidebar start--><br>
+    <!--sidebar start--><br><br>
+    <br>
     <aside>
       <div id="sidebar" class="nav-collapse ">
         <!-- sidebar menu start-->
         <ul class="sidebar-menu">
           <li class="sub">
             <a class="" href="/income">
-                          <i class="flaticon-business"></i>
+                          <i class="icon_house_alt"></i>
 
                           <span>Income Wallet</span>
                       </a>
