--- a/public/stylesheets/css/style.css
+++ b/public/stylesheets/css/style.css
@@ -49,6 +49,15 @@ html {
 article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
   display: block; }
 
+  .incomeimg{
+  margin:0;
+  align-self: right;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width:50%;
+  
+}
 body {
   margin: 0;
   font-family: Comfortaa;
@@ -57,7 +66,6 @@ body {
   line-height: 1.5;
   color: #212529;
   text-align: left;
-  background: url('/images/income.png');
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
