--- a/views/income.ejs
+++ b/views/income.ejs
@@ -77,11 +77,12 @@
       </div>
 
       <!--logo start-->
-      <a href="/home" class="logo">Mero <span class="lite">Bachat</span></a>
+      <div class="mainlogo"><a href="/home" class="mainlogo"><img src="/images/mainlogo.png"> </a></div>
+    </div>
       <!--logo end-->
 
-      <div class="nav search-row" id="top_menu">
-        <!--  search form start -->
+    <!--  <div class="nav search-row" id="top_menu">
+        <!--  search form start 
         <ul class="nav top-menu">
           <li>
             <form class="navbar-form">
@@ -89,8 +90,8 @@
             </form>
           </li>
         </ul>
-        <!--  search form end -->
-      </div>
+        <!--  search form end 
+      </div>-->
 
       <div class="top-nav notification-row">
         <!-- notificatoin dropdown start-->
@@ -261,28 +262,28 @@
               <li>
                 <a href="#">
                                     <span class="label label-primary"><i class="icon_profile"></i></span>
-                                    Friend Request
+                                    income placed.
                                     <span class="small italic pull-right">5 mins</span>
                                 </a>
               </li>
               <li>
                 <a href="#">
                                     <span class="label label-warning"><i class="icon_pin"></i></span>
-                                    John location.
+                                    Goal not met.
                                     <span class="small italic pull-right">50 mins</span>
                                 </a>
               </li>
               <li>
                 <a href="#">
                                     <span class="label label-danger"><i class="icon_book_alt"></i></span>
-                                    Project 3 Completed.
+                                    Goal Completed
                                     <span class="small italic pull-right">1 hr</span>
                                 </a>
               </li>
               <li>
                 <a href="#">
                                     <span class="label label-success"><i class="icon_like"></i></span>
-                                    Mick appreciated your work.
+                                    
                                     <span class="small italic pull-right"> Today</span>
                                 </a>
               </li>
@@ -296,7 +297,7 @@
           <li class="dropdown">
             <a data-toggle="dropdown" class="dropdown-toggle" href="#">
                             <span class="profile-ava">
-                                <img alt="" src="img/avatar1_small.jpg">
+                                
                             </span>
                             <span class="username">smilerac</span>
                             <b class="caret"></b>
@@ -332,7 +333,7 @@
       </div>
     </header>
     <!--header end-->
-<br>
+<br><br><br>
     <!--sidebar start-->
     <aside>
       <div id="sidebar" class="nav-collapse ">
@@ -455,7 +456,9 @@
     <br>
     <% }) %>
 
-    </section></section>
+    </section>
+    <div class="incomeimg"><img src="/images/Income.jpg" ></div>
+  </section>
    
        
 
