all total done except savings

--- a/views/goals.ejs
+++ b/views/goals.ejs
@@ -5,7 +5,7 @@
 <h1>Your Goals for the week</h1>
 
 
-<h2>Total Saving Goal for the week = <%= addall %></h2>
+<h2>Total Saving Goal for the week = <%= gaddall %></h2>
 
 <% goals.forEach(function(goal) {%>
 
