changes in border

--- a/public/stylesheets/mygoals.css
+++ b/public/stylesheets/mygoals.css
@@ -1,10 +1,13 @@
 .goalbody {
   font-family:aerial;
-  background: url(http://www.shukatsu-note.com/wp-content/uploads/2014/12/computer-564136_1280.jpg) no-repeat;
-  background-size: cover;
+  /*background: url('/images/save.jpg') no-repeat;
+  background-size: cover;*/
   height: 100vh;
 }
-
+body{
+  background: url('/images/save.jpg') no-repeat;
+  background-size: cover;
+}
 h1 {
   text-align: center;
   font-family: Tahoma, Arial, sans-serif;
