--- a/views/expense.ejs
+++ b/views/expense.ejs
@@ -75,7 +75,8 @@
       </div>
 
       <!--logo start-->
-      <a href="/home" class="logo">Mero <span class="lite">Bachat</span></a>
+      <div class="mainlogo"><a href="/home" class="mainlogo"><img src="/images/mainlogo.png"> </a></div>
+    </div>
       <!--logo end-->
 
       <div class="nav search-row" id="top_menu">
@@ -330,7 +331,9 @@
       </div>
     </header>
     <!--header end-->
-
+<br>
+<br>
+<br>
     <!--sidebar start-->
     <aside>
       <div id="sidebar" class="nav-collapse ">
