--- a/views/setgoal.ejs
+++ b/views/setgoal.ejs
@@ -4,7 +4,7 @@
 <section class = "goalbody">
     <h1>Set your Goals</h1>
     <div class="box">
-    <button  onclick="openForm()"> <a href="#popup1">set goals</a></button>
+    <button  onclick="openForm()"> <a href="#popup1" class="goallink">set goals</a></button>
     </div>
     <div id="popup1" class="overlay">
      <div class="popup">.
