--- a/public/stylesheets/mygoals.css
+++ b/public/stylesheets/mygoals.css
@@ -3,6 +3,7 @@
   /*background: url('/images/save.jpg') no-repeat;
   background-size: cover;*/
   height: 100vh;
+  position: absolute;
 }
 body{
   background: url('/images/save.jpg') no-repeat;
@@ -18,12 +19,17 @@ h1 {
 .box {
   width: 40%;
   margin: 0 auto;
-  background: rgba(255,255,255,0.2);
+  /*background: rgba(255,255,255,0.2);*/
   padding: 35px;
-  border: 2px solid #fff;
-  border-radius: 20px/50px;
-  background-clip: padding-box;
+  /*border: 2px solid #fff;*/
+  /*border-radius: 20px/50px;*/
+ /* background-clip: padding-box;*/
   text-align: center;
+}
+.goallink{
+  color: rgb(116, 154, 212);
+ font-size:110%;
+text-decoration:none;
 }
 
 .button {
