--- a/views/goals.ejs
+++ b/views/goals.ejs
@@ -417,20 +417,20 @@
     <section id="main-content">
       <section class="wrapper">
         <!--overview start-->
-        <div class="row">
-          <div class="col-lg-12">
-            <h3 class="page-header"><i class="fa fa-laptop"></i> Total Income = <%= addall %></h3>
-            <!-- <ol class="breadcrumb">
-              <li><i class="fa fa-home"></i><a href="index.html">Home</a></li>
-              <li><i class="fa fa-laptop"></i>Dashboard</li>
-            </ol> -->
-          </div>
-        </div>
+        
 <section class = "goalbody">
 <h1>Your Goals for the week</h1>
 
-
-<h2>Total Saving Goal for the week = <%= addall %></h2>
+<div class="row">
+    <div class="col-lg-12">
+      <h5 class="page-header"><i class="fa fa-laptop"></i> Total Income = <%= addall %></h5>
+      <!-- <ol class="breadcrumb">
+        <li><i class="fa fa-home"></i><a href="index.html">Home</a></li>
+        <li><i class="fa fa-laptop"></i>Dashboard</li>
+      </ol> -->
+    </div>
+  </div>
+<h4>Total Saving Goal for the week = <%= addall %></h4>
 
 <% goals.forEach(function(goal) {%>
 
@@ -446,7 +446,7 @@
 
 
 <div class="box">
-<button  onclick="openForm()"> <a href="#popup1">Set a New Goal</a></button>
+<button  onclick="openForm()"> <a href="#popup1" class="goallink">Set a New Goal</a></button>
 </div>
 <div id="popup1" class="overlay">
   <div class="popup">.
@@ -471,10 +471,7 @@
 
               
  
-              <div class="custom-control custom-checkbox mb-3">
-                <input type="checkbox" class="custom-control-input" id="customCheck1">
-                
-              </div>
+              
               <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit" onclick="closeForm()">Set</button>
             </form>
           </div>
