--- a/views/goals.ejs
+++ b/views/goals.ejs
@@ -471,7 +471,10 @@
 
               
  
-              
+              <div class="custom-control custom-checkbox mb-3">
+                <input type="checkbox" class="custom-control-input" id="customCheck1">
+                
+              </div>
               <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit" onclick="closeForm()">Set</button>
             </form>
           </div>
