worked a bit on expenses

--- a/views/expense.ejs
+++ b/views/expense.ejs
@@ -444,7 +444,7 @@
    <% expenses.forEach(function(expense) {%>
 
 <div class="dropdown">
-  <button onclick="myFunction()" class="dropbtn"><%= expense.name %>Rs. <%= expense.amount %></button>
+  <button onclick="myFunction()" class="dropbtn"><%= expense.name %> pocket <br> Rs. <%= expense.amount %></button>
   <div id="myDropdown" class="dropdown-content">
     <!-- <div><h3></h3>ADD the pocket</h3>
         <button class="add" onclick="add()">+</button> -->
