change in background

--- a/views/expense.ejs
+++ b/views/expense.ejs
@@ -64,7 +64,7 @@
   ======================================================= -->
 </head>
 
-<body background = "/images/cartoonmoney.jpg">
+<body background = "/images/cartoonmoney.png">
   <!-- container section start -->
   <section id="container" class="">
 
