--- a/views/index.ejs
+++ b/views/index.ejs
@@ -44,7 +44,7 @@
   ======================================================= -->
 </head>
 
-<body>
+<body background="/images/home.png">
   <!-- container section start -->
   <section id="container" class="">
 
@@ -398,7 +398,7 @@
       <section class="wrapper">
         <!--overview start-->
         <div class="move">
-        <div class="row"><div class="img"><img src="/images/home.jpg" height="200" width="200"></div> 
+        <div class="row">
           <div class="col-lg-12">
           
             <h3 class="page-header"><i class="fa fa-laptop"></i><%= LoginInfo.username %>, Welcome to <b>Mero Bachat</b> </h3></div>
