expense CRUD complete

--- a/views/eachincome.ejs
+++ b/views/eachincome.ejs
@@ -2,13 +2,21 @@
     <title></title>
 
 </head>
+<br>
+<br>
+
+<br>
+<br>
+<br>
+<br>
+
 <link href="/stylesheets/form.css" rel="stylesheet" /> 
 <body>
 <div class="edit">
         <div class="container-contact1">
     <form action="" class="form-container" >
-          <h1><%= incomes.name %> </h1>
-          <label for="amount"><b><%= incomes.amount %> </b></label><br>
+          <h1><%= incomes.name %> pocket </h1>
+          <label for="amount"><b>Amount :</i><%= incomes.amount %> </b></label><br><br>
           <span class="shadow-input1"></span>
           <a href="/edit/<%= incomes._id %>"><button type="button" class="btn" >Edit</button>
         <a href="/remove/<%= incomes._id %>"><button type="button" class="btn" >Delete</button>
