--- a/views/expense.ejs
+++ b/views/expense.ejs
@@ -432,7 +432,7 @@
         <div class="pro">ADD
           <button class="add" onclick="add()">+</button></div>
           <div class="form-popup" id="add">
-            <form action="/addpocket" class="form-container" method = 'post'>
+            <form action="/saveiexpense" class="form-container" method = 'post'>
               <h1>Add a Pocket</h1>
               <label for="name"><b>Name</b></label>
               <input type="text" placeholder="Pocket Name" name="name" required>
