minor imperfections remoed

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,12 +4,12 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Creative - Bootstrap 3 Responsive Admin Template">
+  <meta name="description" content="Mero Bachat">
   <meta name="author" content="GeeksLabs">
   <meta name="keyword" content="Creative, Dashboard, Admin, Template, Theme, Bootstrap, Responsive, Retina, Minimal">
   <link rel="shortcut icon" href="/images/favicon.png">
 
-  <title>Creative - Bootstrap Admin Template</title>
+  <title>Mero Bachat</title>
 
 
    <!-- Bootstrap CSS -->
@@ -36,12 +36,7 @@
    <link href="/stylesheets/xcharts.min.css" rel=" stylesheet">
    <link href="/stylesheets/jquery-ui-1.10.4.min.css" rel="stylesheet"> 
    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Comfortaa" />
-  <!-- =======================================================
-    Theme Name: NiceAdmin
-    Theme URL: https://bootstrapmade.com/nice-admin-bootstrap-admin-html-template/
-    Author: BootstrapMade
-    Author URL: https://bootstrapmade.com
-  ======================================================= -->
+
 </head>
 
 <body background="/images/home.png">
@@ -58,7 +53,7 @@
       <div class="mainlogo"><a href="/home" class="mainlogo"><img src="/images/mainlogo.png"> </a></div>
     </div>
      <!--   <div class="nav search-row" id="top_menu">
-        <!--  search form start 
+        search form start 
         <ul class="nav top-menu">
           <li>
             <form class="navbar-form">
@@ -157,7 +152,7 @@
               </li>
             </ul>
           </li>
-          <!-- task notificatoin end -->
+          <!- task notificatoin end -->
           <!-- inbox notificatoin start--><!--
           <li id="mail_notificatoin_bar" class="dropdown">
             <a data-toggle="dropdown" class="dropdown-toggle" href="#">
@@ -1064,8 +1059,9 @@
     <!--main content end-->
   </section>
   <!-- container section start -->
-
+  
   <!-- javascripts -->
+  <script src="/javascripts/chart.js"></script>
   <script src="/javascripts/jquery.js"></script>
   <script src="/javascripts/jquery-ui-1.10.4.min.js"></script>
   <script src="/javascripts/jquery-1.8.3.min.js"></script>
@@ -1081,7 +1077,7 @@
   <script src="/javascripts/jquery.easy-pie-chart.js"></script>
   <script src="/javascripts/owl.carousel.js"></script>
   <!-- jQuery full calendar -->
-  <<script src="/javascripts/fullcalendar.min.js"></script>
+  <script src="/javascripts/fullcalendar.min.js"></script>
     <!-- Full Google Calendar - Calendar -->
     <script src="/javascripts/fullcalendar.js"></script>
     <!--script for this page only-->
