changes in charts inner content

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -404,15 +404,15 @@
   <!-- ./wrapper -->
   
   <!-- jQuery -->
-  <script src="../../plugins/jquery/jquery.min.js"></script>
+  <script src="/stylesheets/plugins/jquery/jquery.min.js"></script>
   <!-- Bootstrap 4 -->
-  <script src="../../plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="/stylesheets/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
   <!-- ChartJS -->
-  <script src="../../plugins/chart.js/Chart.min.js"></script>
+  <script src="/stylesheets/plugins/chart.js/Chart.min.js"></script>
   <!-- AdminLTE App -->
-  <script src="../../dist/js/adminlte.min.js"></script>
+  <script src="/stylesheets/dist/js/adminlte.min.js"></script>
   <!-- AdminLTE for demo purposes -->
-  <script src="../../dist/js/demo.js"></script>
+  <script src="/stylesheets/dist/js/demo.js"></script>
   <!-- page script -->
   <script>
     $(function () {
