charts front end done

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -178,7 +178,7 @@
           <li class="sub">
             <a class="" href="/income">
                           <i class="icon_house_alt"></i>
-
+  
                           <span>Income Wallet</span>
                       </a>
           </li>
@@ -215,11 +215,11 @@
             <a class="" href="chart-chartjs.html">
                           <i class="icon_piechart"></i>
                           <span>Charts</span>
-
+  
                       </a>
-
+  
           </li>
-
+  
           <li class="sub-menu">
             <a href="javascript:;" class="">
                           <i class="icon_table"></i>
@@ -230,7 +230,7 @@
               <li><a class="" href="basic_table.html">Basic Table</a></li>
             </ul>
           </li>
-
+  
           <li class="sub-menu">
             <a href="javascript:;" class="">
                           <i class="icon_documents_alt"></i>
@@ -245,20 +245,29 @@
               <li><a class="" href="404.html">404 Error</a></li>
             </ul>
           </li>
-
+  
         </ul>-->  
         <!-- sidebar menu end-->
       </div>
     </aside>
-    <!--sidebar end-->
-
-    <main content start
-    <section id="main-content">
-      <section class="wrapper" style="width: 150%;">
-
+    <!-- Content Wrapper. Contains page content -->
     <div class="content-wrapper">
       <!-- Content Header (Page header) -->
-     
+      <section class="content-header">
+        <div class="container-fluid">
+          <div class="row mb-2">
+            <div class="col-sm-6">
+              <h1>ChartJS</h1>
+            </div>
+            <div class="col-sm-6">
+              <ol class="breadcrumb float-sm-right">
+                <li class="breadcrumb-item"><a href="#">Home</a></li>
+                <li class="breadcrumb-item active">ChartJS</li>
+              </ol>
+            </div>
+          </div>
+        </div><!-- /.container-fluid -->
+      </section>
   
       <!-- Main content -->
       <section class="content">
@@ -297,7 +306,7 @@
                   </div>
                 </div>
                 <div class="card-body">
-                  <canvas id="donutChart" style="height:230px; min-height:230px"></canvas>
+                  <canvas id="donutChart" style="height:230px;max-height: 230px;"></canvas>
                 </div>
                 <!-- /.card-body -->
               </div>
@@ -315,7 +324,7 @@
                   </div>
                 </div>
                 <div class="card-body">
-                  <canvas id="pieChart" style="height:230px; min-height:230px"></canvas>
+                  <canvas id="pieChart" style="height:230px; max-height: 230px;"></canvas>
                 </div>
                 <!-- /.card-body -->
               </div>
@@ -393,7 +402,7 @@
       <!-- /.content -->
     </div>
     <!-- /.content-wrapper -->
-    
+  
   
     <!-- Control Sidebar -->
     <aside class="control-sidebar control-sidebar-dark">
@@ -600,6 +609,7 @@
   </script>
   </body>
   </html>
+  
   </section>
   <!-- container section start -->
   
