email notification on button click and some minor changes

--- a/public/stylesheets/bootstrap-fullcalendar.css
+++ b/public/stylesheets/bootstrap-fullcalendar.css
@@ -628,7 +628,7 @@ table.fc-border-separate {
   overflow: hidden !important;
   line-height: 8px !important;
   font-size: 11px  !important;
-  font-family: monospace;
+  font-family: comfortaa;
   text-align: center;
   cursor: s-resize;
   }
