--- a/public/stylesheets/bootstrap-theme.css
+++ b/public/stylesheets/bootstrap-theme.css
@@ -35,7 +35,7 @@ audio:not([controls]) {
   display: none;
 }
 html {
-  font-family: sans-serif;
+  font-family: comfortaa;
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
 }
@@ -76,7 +76,7 @@ code,
 kbd,
 pre,
 samp {
-  font-family: monospace, serif;
+  font-family: comfortaa;
   font-size: 1em;
 }
 pre {
@@ -123,7 +123,7 @@ button,
 input,
 select,
 textarea {
-  font-family: inherit;
+  font-family: comfortaa;
   font-size: 100%;
   margin: 0;
 }
@@ -258,7 +258,7 @@ html {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 body {
-  font-family: Lato;
+  font-family: comfortaa;
   font-size: 14px;
   line-height: 1.428571429;
   color: #2b2b2b;
@@ -268,7 +268,7 @@ input,
 button,
 select,
 textarea {
-  font-family: inherit;
+  font-family: comfortaa;
   font-size: inherit;
   line-height: inherit;
 }
@@ -393,7 +393,7 @@ h6,
 .h4,
 .h5,
 .h6 {
-  font-family: Lato;
+  font-family: comfortaa;
   font-weight: 400;
   line-height: 1.1;
 }
@@ -603,7 +603,7 @@ address {
 }
 code,
 pre {
-  font-family: Lato;
+  font-family: comfortaa;
 }
 code {
   padding: 2px 4px;
@@ -1527,7 +1527,7 @@ select[size] {
 select optgroup {
   font-size: inherit;
   font-style: inherit;
-  font-family: inherit;
+  font-family: comfortaa;
 }
 input[type="file"]:focus,
 input[type="radio"]:focus,
@@ -2162,7 +2162,7 @@ input[type="button"].btn-block {
   position: relative;
   top: 1px;
   display: inline-block;
-  font-family: 'Glyphicons Halflings';
+  font-family: 'comfortaa';
   font-style: normal;
   font-weight: normal;
   line-height: 1;
@@ -5292,7 +5292,7 @@ body.modal-open,
   height: 20px;
   margin-top: -10px;
   margin-left: -10px;
-  font-family: serif;
+  font-family: comfortaa;
 }
 .carousel-control .icon-prev:before {
   content: '\2039';
