--- a/views/index.ejs
+++ b/views/index.ejs
@@ -277,7 +277,7 @@
               <!-- AREA CHART -->
               <div class="card card-primary">
                 <div class="card-header">
-                  <h3 class="card-title">Area Chart</h3>
+                  <h3 class="card-title">Expenses v/s Savings Area Chart</h3>
   
                   <div class="card-tools">
                     <button type="button" class="btn btn-tool" data-card-widget="collapse"><i class="fas fa-minus"></i>
@@ -297,7 +297,7 @@
               <!-- DONUT CHART -->
               <div class="card card-danger">
                 <div class="card-header">
-                  <h3 class="card-title">Donut Chart</h3>
+                  <h3 class="card-title">Expenses Donut Chart</h3>
   
                   <div class="card-tools">
                     <button type="button" class="btn btn-tool" data-card-widget="collapse"><i class="fas fa-minus"></i>
@@ -336,7 +336,7 @@
               <!-- LINE CHART -->
               <div class="card card-info">
                 <div class="card-header">
-                  <h3 class="card-title">Line Chart</h3>
+                  <h3 class="card-title">Expenses v/s Savings Line Chart</h3>
   
                   <div class="card-tools">
                     <button type="button" class="btn btn-tool" data-card-widget="collapse"><i class="fas fa-minus"></i>
@@ -356,7 +356,7 @@
               <!-- BAR CHART -->
               <div class="card card-success">
                 <div class="card-header">
-                  <h3 class="card-title">Bar Chart</h3>
+                  <h3 class="card-title">Expenses v/s Savings Bar Chart</h3>
   
                   <div class="card-tools">
                     <button type="button" class="btn btn-tool" data-card-widget="collapse"><i class="fas fa-minus"></i>
@@ -376,7 +376,7 @@
               <!-- STACKED BAR CHART -->
               <div class="card card-success">
                 <div class="card-header">
-                  <h3 class="card-title">Stacked Bar Chart</h3>
+                  <h3 class="card-title">Expenses v/s Savings Stacked Bar Chart</h3>
   
                   <div class="card-tools">
                     <button type="button" class="btn btn-tool" data-card-widget="collapse"><i class="fas fa-minus"></i>
@@ -441,7 +441,7 @@
         labels  : ['January', 'February', 'March', 'April', 'May', 'June', 'July'],
         datasets: [
           {
-            label               : 'Digital Goods',
+            label               : 'Savings',
             backgroundColor     : 'rgba(60,141,188,0.9)',
             borderColor         : 'rgba(60,141,188,0.8)',
             pointRadius          : false,
@@ -449,10 +449,10 @@
             pointStrokeColor    : 'rgba(60,141,188,1)',
             pointHighlightFill  : '#fff',
             pointHighlightStroke: 'rgba(60,141,188,1)',
-            data                : [28, 48, 40, 19, 86, 27, 90]
+            data                : [2800, 4800, 4000, 1900, 8600, 2700, 9000]
           },
           {
-            label               : 'Electronics',
+            label               : 'Expenses',
             backgroundColor     : 'rgba(210, 214, 222, 1)',
             borderColor         : 'rgba(210, 214, 222, 1)',
             pointRadius         : false,
@@ -460,7 +460,7 @@
             pointStrokeColor    : '#c1c7d1',
             pointHighlightFill  : '#fff',
             pointHighlightStroke: 'rgba(220,220,220,1)',
-            data                : [65, 59, 80, 81, 56, 55, 40]
+            data                : [6500, 5900, 8000, 8100, 5600, 5500, 4000]
           },
         ]
       }
@@ -515,16 +515,16 @@
       var donutChartCanvas = $('#donutChart').get(0).getContext('2d')
       var donutData        = {
         labels: [
-            'Chrome', 
-            'IE',
-            'FireFox', 
-            'Safari', 
-            'Opera', 
-            'Navigator', 
+            'Fun', 
+            'Groceries',
+            'Rent', 
+            'College fees', 
+            'clothes', 
+            'Eat out', 
         ],
         datasets: [
           {
-            data: [700,500,400,600,300,100],
+            data: [7000,5000,4000,6000,3000,500],
             backgroundColor : ['#f56954', '#00a65a', '#f39c12', '#00c0ef', '#3c8dbc', '#d2d6de'],
           }
         ]
